fix: adjust css of 404 page to be responsive to tablets and removed overflow

--- a/src/components/404.css
+++ b/src/components/404.css
@@ -47,10 +47,11 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: center;
 }
 
 .main-container{
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -78,10 +79,6 @@
 
 
 @media screen and (max-width: 768px) {
-
-    .container-404{
-        justify-content: center;
-    }
 
     .ornament-bottom-right{
         width: 50%;
